# project-team-guide

./: .gitreview  README.rst  setup.cfg  tox.ini
contrib/: constraints.odg
doc/: requirements.txt
doc/source/: bugs.rst  conf.py  cross-project.rst  dependency-management.rst  deprecation.rst  documentation.rst  glossary.rst  i18n.rst  index.rst  introduction.rst  legal-issues-faq.rst  open-community.rst  open-design.rst  open-development.rst  open-source.rst  oslo.rst  other-branches.rst  preface.rst  project-setup.rst  ptl.rst  release-cadence-adjustment.rst  release-management.rst  repository.rst  review-the-openstack-way.rst  spread-the-word.rst  stable-branches.rst  technical-guidance.rst  technical-guides  testing.rst  vulnerability-management.rst  zuulv3.rst
doc/source/_extra/: .htaccess
doc/source/project-setup/: javascript.rst  python.rst
technical-guides/: best-practices-for-project-setup.rst  index.rst  unified-limits.rst
