[metadata]
name = project-team-guide
summary = OpenStack Project Team Guide
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/project-team-guide/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux


[wheel]
universal = 1
